--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,7 +1,8 @@
 <!-- Here we can add local storybook styles (layout and presentational) that we don't want to use in the app -->
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <style>
   body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Roboto, sans-serif;
     padding: 0;
     margin: 0;
   }
