Add Heading component, reorganize components

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,5 @@
 <!-- Here we can add local storybook styles (layout and presentational) that we don't want to use in the app -->
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto,Bellefair" rel="stylesheet">
 <style>
   body {
     font-family: Roboto, sans-serif;
