--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,10 +1,11 @@
 <!-- Here we can add local storybook styles (layout and presentational) that we don't want to use in the app -->
-<link href="https://fonts.googleapis.com/css?family=Roboto,Bellefair" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bellefair|Roboto" rel="stylesheet">
 <style>
   body {
     font-family: Roboto, sans-serif;
     padding: 0;
     margin: 0;
+    background: #f9f9f9;
   }
   #root {
     padding: 1rem;
@@ -16,6 +17,7 @@
     padding: 0 !important;
     border: 0 !important;
     box-shadow: none !important;
+    background: transparent !important;
   }
   /* Story Source */
   #root > div > div:last-child > div {
@@ -23,5 +25,6 @@
     padding: 0 !important;
     border: 0 !important;
     box-shadow: none !important;
+    background: transparent !important;
   }
 </style>
